--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "start": "nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
-    "client-dev": "NODE_ENV=development webpack -w"
+    "client-dev": "NODE_ENV=development webpack -w",
+    "stress:server": " $(npm bin)/artillery run ./server/Spec/back-end-stress-test.yml"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "newrelic": "^7.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -25,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "artillery": "^1.6.2",
     "babel-loader": "^8.2.2",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.1",
