--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "artillery": "^1.6.2",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.1.0",
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "html-webpack-plugin": "^4.5.1",
     "nodemon": "^2.0.7",
     "style-loader": "^2.0.0",
-    "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
-  }
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "type": "module"
 }
