--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "scripts": {
     "start": "nodemon server/server.js",
-    "build": "NODE_ENV=production webpack",
+    "client-build": "NODE_ENV=production webpack",
     "client-dev": "NODE_ENV=development webpack -w",
-    "stress:server": " $(npm bin)/artillery run ./server/Spec/back-end-stress-test.yml"
+    "stress:server": " $(npm bin)/artillery run ./server/Spec/back-end-stress-test.yml",
+    "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
+    "dev:start": "nodemon ./server-build/index.js",
+    "dev": "npm-run-all --parallel build dev:*"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -24,7 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "artillery": "^1.6.2",
@@ -33,11 +36,11 @@
     "css-loader": "^5.0.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "html-webpack-plugin": "^4.5.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^2.0.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "^1.7.2"
-  },
-  "type": "module"
+  }
 }
