--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "stress:server": " $(npm bin)/artillery run ./server/Spec/back-end-stress-test.yml",
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
     "dev:start": "nodemon ./server-build/index.js",
-    "dev": "npm-run-all --parallel build dev:*"
+    "dev": "npm-run-all --parallel build dev:*",
+    "build": "webpack --config webpack.server.js --mode=production"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "artillery": "^1.6.2",
