--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "stress:server": " $(npm bin)/artillery run ./server/Spec/back-end-stress-test.yml",
     "dev:build-server": "NODE_ENV=development webpack --config webpack.server.js --mode=development -w",
     "dev:start": "nodemon ./server-build/index.js",
-    "dev": "npm-run-all --parallel build dev:*",
+    "dev": "npm-run-all --parallel client-build dev:*",
     "build": "webpack --config webpack.server.js --mode=production"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-hooks": "^2.6.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
