--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-redis-cache": "^1.1.3",
     "file-loader": "^6.2.0",
     "newrelic": "^7.3.0",
     "react": "^17.0.1",
